add hsql integration module

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <module>generator</module>
         <module>benchmark</module>
         <module>testing</module>
+        <module>hsql</module>
     </modules>
 
     <scm>
